--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+        <title>OS Design Guide - About Us</title>
     <style>
       body, html {
           height: 100%;
@@ -31,7 +32,6 @@
       <p class="lead">
         The Vision: To collaboratively create a web based design guide engineers and architects can use to find the latest and greatest design practices and resources.
       </p>
-
       <hr class="my-4">
 
 
@@ -41,7 +41,7 @@
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                The numbers
+                Numbers
               </button>
             </h5>
           </div>
@@ -58,7 +58,7 @@
           <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                The Community Articles
+                Community Articles
               </button>
             </h5>
           </div>
@@ -72,7 +72,7 @@
           <div class="card-header" id="headingThree">
             <h5 class="mb-0">
               <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                The Guide Template
+                Guide Template
               </button>
             </h5>
           </div>
@@ -90,7 +90,7 @@
                     <a class="nav-link"  role="tab" data-toggle="tab" aria-controls="specifications" aria-selected="false" href="#specifications"> Specifications</a>
                     <a class="nav-link"  role="tab" data-toggle="tab" aria-controls="schedule" aria-selected="false" href="#schedule">Scheduling</a>
                     <a class="nav-link"  role="tab" data-toggle="tab" aria-controls="estimate" aria-selected="false" href="#estimate">Cost Estimating</a>
-                    <a class="nav-link"  role="tab" data-toggle="tab" aria-controls="products" aria-selected="false" href="#products">Products/Suppliers</a>
+                    <a class="nav-link"  role="tab" data-toggle="tab" aria-controls="products" aria-selected="false" href="#products">Products</a>
                     <a class="nav-link" role="tab" data-toggle="tab" aria-controls="other" aria-selected="false" href="#other">Other Resources</a>
                     <a class="nav-link" role="tab" data-toggle="tab" aria-controls="discussion" aria-selected="false" href="#discussion">Discussions</a>
 
@@ -102,42 +102,42 @@
 
                   <div class="tab-content flex-column">
                     <div class="tab-pane fade active show" id="summary" aria-labelledby="summary-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
 
 
                     </div>
 
                     <div class="tab-pane fade" id="regulations" aria-labelledby="regulations-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="details" aria-labelledby="details-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="specifications" aria-labelledby="specifications-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="schedule" aria-labelledby="schedule-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="estimate" aria-labelledby="estimate-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="products" aria-labelledby="products-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="other" aria-labelledby="other-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                     <div class="tab-pane fade" id="discussion" aria-labelledby="discussion-tab">
-                      <p>Add example content here</p>
+                      <p> </p>
                       <hr>
                     </div>
                   </div>
@@ -151,7 +151,7 @@
         </div>
       </div>
     </div>
-
+  <p class="text-muted text-center">Contact Eddie Paulino at epaulin0@chicagobooth.edu to learn how you can support the development of this open source community</p>
 
   </body>
 </html>
