--- a/app/views/article_templates/index.html.erb
+++ b/app/views/article_templates/index.html.erb
@@ -1,16 +1,19 @@
+<head>
+  <title>OS Design Guide - Community Articles</title>
+</head>
 <div class="container">
   <h1>
     Community Articles
   </h1>
 
   <a href="/articles/new">
-    Add a new article
+    <i class="fas fa-plus"></i>Add a new article
   </a>
 
   <hr>
   <% @articles.each do |article| %>
    <div class="card">
-    <div class="row mb-5 align-items-start">
+    <div class="row mb-2 align-items-start">
   
           <div class="col-6">
           <a href="/articles/<%= article.id %>">
@@ -23,12 +26,12 @@
               <a href="/articles/<%= article.id %>">
                 <%= article.title %>
               </a>
-              <h4><span class="badge"><%= article.get_upvotes.size-article.get_downvotes.size %> Upvote('s)</span></h4>
+              <h4><span class="badge"><i class="fas fa-star"></i>(<%= article.get_upvotes.size-article.get_downvotes.size %>) <i class="fas fa-comments"></i>(<%= article.comment_threads.size %>) </span></h4>
               <h5 class="text-muted">
                 <small class="text-muted">Authored by: </small> <small><%= article.author %></small>
 
                 <small class="float-right">
-                  Published on: <%= article.created_at.strftime("%B %d, %Y") %>
+                  Posted on: <%= article.created_at.strftime("%B %d, %Y") %>
                 </small>
 
               </h5>
@@ -44,7 +47,7 @@
                   <div class="media-body">
 
                     <p>
-                      <%= raw article.content[0,600]+"..." %>
+                      <%= raw article.content[0,500]+"..." %>
                     </p>
                     <!--                 EDIT BUTTON-->
                     <% if current_user == nil %>
@@ -72,6 +75,9 @@
         <!-- card  -->
       </div>
       <!-- col-6 -->
+        <div class="card-footer text-muted">
+          Disciplines: Industries: 
+        </div>
     </div>
   <% end %>
 
