--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -117,6 +117,34 @@
           </div>
           <!-- Devise Input for first name end -->
           
+          <!-- Devise Input for middle initial start -->
+                    <div class="form-group">
+            <% middle_initial_was_invalid = resource.errors.include?(:middle_initial) %>
+
+            <% middle_initial_class = "form-control" %>
+
+            <% if was_validated %>
+              <% if middle_initial_was_invalid %>
+                <% middle_initial_class << " is-invalid" %>
+              <% else %>
+                <% middle_initial_class << " is-valid" %>
+              <% end %>
+            <% end %>
+
+            <%= f.label :middle_initial, "Middle initial (optional)" %>
+
+            <%= f.text_field :middle_initial, :class => middle_initial_class, :placeholder => "Enter middle initial" %>
+
+            <% if middle_initial_was_invalid %>
+              <% resource.errors.full_messages_for(:middle_initial).each do |message| %>
+                <div class="invalid-feedback d-flex">
+                  <%= message %>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          <!-- Devise Input for middle initial end -->
+          
           <!-- Devise Input for last name start -->
                     <div class="form-group">
             <% last_name_was_invalid = resource.errors.include?(:last_name) %>
@@ -159,7 +187,7 @@
               <% end %>
             <% end %>
 
-            <%= f.label :company %>
+            <%= f.label :company, "Company (optional)" %>
 
             <%= f.text_field :company, :class => company_class, :placeholder => "Enter company" %>
 
@@ -187,7 +215,7 @@
               <% end %>
             <% end %>
 
-            <%= f.label :title %>
+            <%= f.label :title, "Title (optional)" %>
 
             <%= f.text_field :title, :class => title_class, :placeholder => "Enter title" %>
 
