--- a/app/views/article_templates/new_form.html.erb
+++ b/app/views/article_templates/new_form.html.erb
@@ -35,6 +35,22 @@
     <input type="text" id="author" name="author" class="form-control" value="<%= @article.try(:author) %>">
   </div>
 
+    <!-- Label and input for industries -->
+    <div class="form-group">
+      <label for="industries">
+        Industries <span class="text-muted">(multi-select)</span>
+      </label>
+      <%= select_tag("industries", options_from_collection_for_select(Industry.all, :id, :name), :multiple => true, :class => "form-control") %>
+    </div>
+
+    <!-- Label and input for discipline, the database table must have rows of disciplines -->
+    <div class="form-group">
+      <label for="disciplines">
+        Disciplines <span class="text-muted">(multi-select)</span>
+      </label>
+      <%= select_tag("disciplines", options_from_collection_for_select(Discipline.all, :id, :name),:multiple =>  true, :class => "form-control") %>
+    </div>
+
   <!-- Label and input for image -->
   <div class="form-group">
     <label for="image">
