try fixing ckeditor 4

--- a/app/views/article_templates/edit_form.html.erb
+++ b/app/views/article_templates/edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag Ckeditor.cdn_url %>
+<%#= javascript_include_tag Ckeditor.cdn_url %>
 <!-- Validation failure messages -->
 <% if @article.errors.any? %>
   <% @article.errors.full_messages.each do |message| %>
