try ckeditor change to production.rb

--- a/app/views/article_templates/edit_form.html.erb
+++ b/app/views/article_templates/edit_form.html.erb
@@ -1,4 +1,9 @@
 <%= javascript_include_tag Ckeditor.cdn_url %>
+<script>
+  CKEDITOR.replace( 'ckeditor', {
+        customConfig: '/ckeditor/config.js'
+} );
+</script>
 <!-- Validation failure messages -->
 <% if @article.errors.any? %>
   <% @article.errors.full_messages.each do |message| %>
