--- a/app/views/article_templates/edit_form.html.erb
+++ b/app/views/article_templates/edit_form.html.erb
@@ -58,7 +58,11 @@
 
     <textarea id="content" name="content" class="ckeditor"><%= raw @article.content %></textarea>
   </div>
-
+<script>
+CKEDITOR.replace( 'ckeditor', {
+    customConfig: '/ckeditor/config.js'
+});
+</script>
   <!-- Label and input for user_id -->
   <div class="form-group">
 
