--- a/app/views/article_templates/edit_form.html.erb
+++ b/app/views/article_templates/edit_form.html.erb
@@ -1,4 +1,4 @@
-<%#= javascript_include_tag Ckeditor.cdn_url %>
+<%= javascript_include_tag Ckeditor.cdn_url %>
 
 
 <!-- Validation failure messages -->
